--- a/style/stylekart.css
+++ b/style/stylekart.css
@@ -51,7 +51,7 @@ body {
     padding-bottom: 2%;
     width: 70%;
     height: 50%;
-    border: dashed red;
+    /*border: dashed red; */
 }
 input{
     padding:4px 10px;
