--- a/style/stiledis.css
+++ b/style/stiledis.css
@@ -93,3 +93,9 @@ form {
     color: white;
     border: none;
 }
+#salekn{
+    background: rgb(20, 185, 20);
+    color: #fefefe;
+    border: none;
+    cursor: pointer;
+}
