--- a/style/stylekart.css
+++ b/style/stylekart.css
@@ -141,3 +141,9 @@ h4{
     padding-top: 0.5%;
     margin-top: 2%;
 }
+#salekn{
+    background: rgb(20, 185, 20);
+    color: #fefefe;
+    border: none;
+    cursor: pointer;
+}
