--- a/style/stiledis.css
+++ b/style/stiledis.css
@@ -99,3 +99,9 @@ form {
     border: none;
     cursor: pointer;
 }
+#salekn{
+    background: rgb(20, 185, 20);
+    color: #fefefe;
+    border: none;
+    cursor: pointer;
+}
